# lucp

./: .clang-format  .cmake-format.py  CMakeLists.txt  README.md  rebuild.sh
demo/: CMakeLists.txt  lucp_client_demo.c  lucp_server_demo.c
lucpd/: CMakeLists.txt
lucpd/src/: lucpd.c  lucpd_cfg.c  lucpd_cfg.h  lucpd_utils.c  lucpd_utils.h
lucplib/: CMakeLists.txt  lucp.c  lucp.h  lucp.pc.in
luftpd/: CMakeLists.txt
luftpd/src/: luftpd.c  luftpd_cfg.c  luftpd_cfg.h  luftpd_utils.c  luftpd_utils.h
test/: CMakeLists.txt  test.c  test2.c
